# cpp-remote-profiler

./: .clang-format  .gitignore  BUG_FIX_REPORT.md  BUILD_STEPS.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CMAKE_GUIDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CPU_PROFILE_GUIDE.md  FINAL_TEST_SUMMARY.md  IMPLEMENTATION_RECORD.md  INLINE_FUNCTIONS_GUIDE.md  LICENSE  PROTO_BUILD.md  README.md  README_BUILD.md  ROADMAP.md  SVG_IMPLEMENTATION.md  TEST_REPORT.md  TEST_RESULTS.md  TODO.md  TROUBLESHOOTING.md  UNIT_TEST_REPORT.md  WORK_NOTES.md  build-with-vcpkg.sh  build.sh  codecov.yml  commit_to_new_branch.sh  conanfile.py  diagnose_build.sh  full_build.sh  generate_proto.sh  install_deps.sh  install_local.sh  lsan.supp  notes.md  plan.md  start.sh  (+3 more)
.github/workflows/: ci.yml  code-quality.yml
cmake/: cpp-remote-profiler-config.cmake.in  tsan.cmake  tsan_test.sh.in
cmake/examples/: CMakeLists.txt  CPM_CMakeLists.txt.example  CPM_example.cmake  FetchContent_example.cmake  FetchContent_integration_example.cpp
cmake/examples/test_fetch_content/: CMakeLists.txt
cmake/examples/test_find_package/: CMakeLists.txt  main.cpp
conan/test_package/: CMakeLists.txt  conanfile.py  main.cpp
docs/: Doxyfile.in  README.md  mainpage.dox
docs/user_guide/: 01_quick_start.md  02_api_reference.md  03_integration_examples.md  04_troubleshooting.md  05_installation.md  06_using_find_package.md
example/: custom_signal.cpp  main.cpp  workload.cpp  workload.h
include/: embed_flamegraph.h  embed_pprof.h  profile_parser.h  profiler_manager.h  profiler_version.h.in  stack_collector.h  symbolize.h  version.h  web_resources.h  web_server.h
include/profiler/: drogon_adapter.h  http_handlers.h  http_server.h  log_sink.h  logger.h
ports/cpp-remote-profiler/: portfile.cmake  vcpkg.json
scripts/: check-format.sh
src/: drogon_adapter.cpp  http_handlers.cpp  profile_parser.cpp  profiler_manager.cpp  stack_collector.cpp  symbolize.cpp  web_resources.cpp  web_server.cpp
src/backends/drogon/: drogon_http_server.cpp  drogon_http_server.h
src/internal/: default_log_sink.cpp  default_log_sink.h  embed_flamegraph.h  embed_pprof.h  log_macros.h  log_manager.cpp  log_manager.h
tests/: profiler_test.cpp  test_automation.js  test_automation.py  test_browser_rendering.html  test_build_flamegraph.js  test_complete_flow.js  test_cpu_profile.cpp  test_flamegraph.sh  test_frontend_logic.js  test_full_flow.cpp  test_logger.cpp
web/: debug.html  flamegraph.html  index.html  show_heap_svg.html  show_svg.html  view_svg.html
